cCompilerForAP9/parser.output
Terminals unused in grammar

   INCLUDE
   SUSTENIDO
   IMAGINARY
   ELLIPSIS
   COMPLEX


State 366 conflicts: 1 shift/reduce
State 382 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | getch_statement
    3                   | CONSTANT
    4                   | STRING_LITERAL
    5                   | ABRE_PARENTESES expression FECHA_PARENTESES
    6                   | IDENTIFIER ABRE_PARENTESES FECHA_PARENTESES
    7                   | IDENTIFIER ABRE_PARENTESES argument_expression_list FECHA_PARENTESES
    8                   | IDENTIFIER ABRE_COLCHETES expression FECHA_COLCHETES
    9                   | IDENTIFIER ABRE_COLCHETES expression FECHA_COLCHETES ABRE_COLCHETES expression FECHA_COLCHETES

   10 postfix_expression: primary_expression
   11                   | postfix_expression PONTO IDENTIFIER
   12                   | postfix_expression MAIS_MAIS
   13                   | postfix_expression MENOS_MENOS
   14                   | ABRE_PARENTESES type_name FECHA_PARENTESES ABRE_CHAVES initializer_list FECHA_CHAVES

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list VIRGULA assignment_expression

   17 unary_expression: postfix_expression
   18                 | MAIS_MAIS unary_expression
   19                 | MENOS_MENOS unary_expression
   20                 | unary_operator cast_expression
   21                 | SIZEOF unary_expression
   22                 | SIZEOF ABRE_PARENTESES type_name FECHA_PARENTESES

   23 unary_operator: AMPERSAND
   24               | ASTERISCO
   25               | MAIS
   26               | MENOS
   27               | TIL
   28               | EXCLAMACAO

   29 cast_expression: unary_expression
   30                | ABRE_PARENTESES type_name FECHA_PARENTESES cast_expression

   31 multiplicative_expression: cast_expression
   32                          | multiplicative_expression ASTERISCO cast_expression
   33                          | multiplicative_expression BARRA cast_expression
   34                          | multiplicative_expression PORCENTAGEM cast_expression

   35 additive_expression: multiplicative_expression
   36                    | additive_expression MAIS multiplicative_expression
   37                    | additive_expression MENOS multiplicative_expression

   38 shift_expression: additive_expression
   39                 | shift_expression MENOR_MENOR additive_expression
   40                 | shift_expression MAIOR_MAIOR additive_expression

   41 relational_expression: shift_expression
   42                      | relational_expression MENOR shift_expression
   43                      | relational_expression MAIOR shift_expression
   44                      | relational_expression MENOR_IGUAL shift_expression
   45                      | relational_expression MAIOR_IGUAL shift_expression

   46 equality_expression: relational_expression
   47                    | equality_expression IGUAL_IGUAL relational_expression
   48                    | equality_expression EXCLAMACAO_IGUAL relational_expression

   49 and_expression: equality_expression
   50               | and_expression AMPERSAND equality_expression

   51 exclusive_or_expression: and_expression
   52                        | exclusive_or_expression CIRCUNFLEXO and_expression

   53 inclusive_or_expression: exclusive_or_expression
   54                        | inclusive_or_expression PIPE exclusive_or_expression

   55 logical_and_expression: inclusive_or_expression
   56                       | logical_and_expression AMPERSAND_AMPERSAND inclusive_or_expression

   57 logical_or_expression: logical_and_expression
   58                      | logical_or_expression PIPE_PIPE logical_and_expression

   59 conditional_expression: logical_or_expression
   60                       | logical_or_expression INTERROGACAO expression DOIS_PONTOS conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 assignment_operator: IGUAL
   64                    | ASTERISCO_IGUAL
   65                    | BARRA_IGUAL
   66                    | PORCENTAGEM_IGUAL
   67                    | MAIS_IGUAL
   68                    | MENOS_IGUAL
   69                    | MENOR_MENOR_IGUAL
   70                    | MAIOR_MAIOR_IGUAL
   71                    | AMPERSAND_IGUAL
   72                    | CIRCUNFLEXO_IGUAL
   73                    | PIPE_IGUAL

   74 expression: assignment_expression
   75           | expression VIRGULA assignment_expression

   76 constant_expression: conditional_expression

   77 declaration: declaration_specifiers PONTO_VIRGULA
   78            | declaration_specifiers init_declarator_list PONTO_VIRGULA

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers
   85                       | function_specifier
   86                       | function_specifier declaration_specifiers

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list VIRGULA init_declarator

   89 init_declarator: declarator
   90                | declarator IGUAL initializer

   91 storage_class_specifier: TYPEDEF
   92                        | EXTERN
   93                        | STATIC
   94                        | AUTO
   95                        | REGISTER

   96 type_specifier: VOID
   97               | CHAR
   98               | SHORT
   99               | INT
  100               | LONG
  101               | FLOAT
  102               | DOUBLE
  103               | SIGNED
  104               | UNSIGNED
  105               | BOOL
  106               | struct_or_union_specifier
  107               | enum_specifier
  108               | TYPE_NAME

  109 struct_or_union_specifier: struct_or_union IDENTIFIER ABRE_CHAVES struct_declaration_list FECHA_CHAVES
  110                          | struct_or_union ABRE_CHAVES struct_declaration_list FECHA_CHAVES
  111                          | struct_or_union IDENTIFIER

  112 struct_or_union: STRUCT
  113                | UNION

  114 struct_declaration_list: struct_declaration
  115                        | struct_declaration_list struct_declaration

  116 struct_declaration: specifier_qualifier_list struct_declarator_list PONTO_VIRGULA

  117 specifier_qualifier_list: type_specifier specifier_qualifier_list
  118                         | type_specifier
  119                         | type_qualifier specifier_qualifier_list
  120                         | type_qualifier

  121 struct_declarator_list: struct_declarator
  122                       | struct_declarator_list VIRGULA struct_declarator

  123 struct_declarator: declarator
  124                  | DOIS_PONTOS constant_expression
  125                  | declarator DOIS_PONTOS constant_expression

  126 enum_specifier: ENUM ABRE_CHAVES enumerator_list FECHA_CHAVES
  127               | ENUM IDENTIFIER ABRE_CHAVES enumerator_list FECHA_CHAVES
  128               | ENUM ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  129               | ENUM IDENTIFIER ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  130               | ENUM IDENTIFIER

  131 enumerator_list: enumerator
  132                | enumerator_list VIRGULA enumerator

  133 enumerator: IDENTIFIER
  134           | IDENTIFIER IGUAL constant_expression

  135 type_qualifier: CONST
  136               | RESTRICT
  137               | VOLATILE

  138 function_specifier: INLINE

  139 declarator: pointer direct_declarator
  140           | direct_declarator

  141 direct_declarator: IDENTIFIER
  142                  | IDENTIFIER ABRE_COLCHETES CONSTANT FECHA_COLCHETES
  143                  | IDENTIFIER ABRE_COLCHETES CONSTANT FECHA_COLCHETES ABRE_COLCHETES CONSTANT FECHA_COLCHETES

  144 pointer: ASTERISCO
  145        | ASTERISCO type_qualifier_list
  146        | ASTERISCO pointer
  147        | ASTERISCO type_qualifier_list pointer

  148 type_qualifier_list: type_qualifier
  149                    | type_qualifier_list type_qualifier

  150 type_name: specifier_qualifier_list
  151          | specifier_qualifier_list abstract_declarator

  152 abstract_declarator: pointer
  153                    | direct_abstract_declarator
  154                    | pointer direct_abstract_declarator

  155 direct_abstract_declarator: ABRE_PARENTESES abstract_declarator FECHA_PARENTESES
  156                           | ABRE_COLCHETES FECHA_COLCHETES
  157                           | ABRE_COLCHETES assignment_expression FECHA_COLCHETES
  158                           | direct_abstract_declarator ABRE_COLCHETES FECHA_COLCHETES
  159                           | direct_abstract_declarator ABRE_COLCHETES assignment_expression FECHA_COLCHETES
  160                           | ABRE_COLCHETES ASTERISCO FECHA_COLCHETES
  161                           | direct_abstract_declarator ABRE_COLCHETES ASTERISCO FECHA_COLCHETES
  162                           | ABRE_PARENTESES FECHA_PARENTESES

  163 initializer: assignment_expression
  164            | ABRE_CHAVES initializer_list FECHA_CHAVES

  165 initializer_list: initializer
  166                 | designation initializer
  167                 | initializer_list VIRGULA initializer
  168                 | initializer_list VIRGULA designation initializer

  169 designation: designator_list IGUAL

  170 designator_list: designator
  171                | designator_list designator

  172 designator: ABRE_COLCHETES constant_expression FECHA_COLCHETES
  173           | PONTO IDENTIFIER

  174 statement: labeled_statement
  175          | compound_statement
  176          | expression_statement
  177          | selection_statement
  178          | iteration_statement
  179          | jump_statement
  180          | breakp_statement
  181          | printf_statement

  182 breakp_statement: BREAKP PONTO_VIRGULA

  183 getch_statement: GETCH ABRE_PARENTESES FECHA_PARENTESES

  184 opt_args: %empty
  185         | VIRGULA assignment_expression
  186         | opt_args VIRGULA assignment_expression

  187 printf: PRINTF

  188 printf_statement: printf ABRE_PARENTESES assignment_expression VIRGULA assignment_expression VIRGULA STRING_LITERAL opt_args FECHA_PARENTESES PONTO_VIRGULA

  189 labeled_statement: IDENTIFIER DOIS_PONTOS statement
  190                  | CASE constant_expression begin_case statement
  191                  | DEFAULT begin_case statement

  192 begin_case: DOIS_PONTOS

  193 compound_statement: ABRE_CHAVES FECHA_CHAVES
  194                   | ABRE_CHAVES block_item_list FECHA_CHAVES

  195 block_item_list: block_item
  196                | block_item_list block_item

  197 block_item: declaration
  198           | statement

  199 expression_statement: PONTO_VIRGULA
  200                     | expression PONTO_VIRGULA

  201 selection_statement: IF ABRE_PARENTESES expression begin_labeled statement
  202                    | IF ABRE_PARENTESES expression begin_labeled statement begin_else statement
  203                    | SWITCH ABRE_PARENTESES expression begin_switch statement

  204 begin_switch: FECHA_PARENTESES

  205 begin_labeled: FECHA_PARENTESES

  206 begin_else: ELSE

  207 iteration_statement: begin_while ABRE_PARENTESES expression begin_labeled2 statement
  208                    | DO statement WHILE ABRE_PARENTESES expression FECHA_PARENTESES PONTO_VIRGULA
  209                    | begin_for ABRE_PARENTESES begin_labeled4 begin_labeled3 begin_labeled5 statement
  210                    | begin_for ABRE_PARENTESES begin_labeled4 begin_labeled3 expression begin_labeled5 statement

  211 begin_labeled5: FECHA_PARENTESES

  212 begin_while: WHILE

  213 begin_labeled2: FECHA_PARENTESES

  214 begin_for: FOR

  215 begin_labeled3: expression_statement

  216 begin_labeled4: expression_statement

  217 jump_statement: GOTO IDENTIFIER PONTO_VIRGULA
  218               | CONTINUE PONTO_VIRGULA
  219               | BREAK PONTO_VIRGULA
  220               | RETURN PONTO_VIRGULA
  221               | RETURN expression PONTO_VIRGULA

  222 translation_unit: external_declaration
  223                 | translation_unit external_declaration

  224 external_declaration: function_definition
  225                     | declaration

  226 function_definition: declaration_specifiers begin_funcao begin_parametro opt_parametros end_parametro compound_statement

  227 opt_parametros: %empty
  228               | parameter_list

  229 parameter_list: parameter_declaration
  230               | parameter_list VIRGULA parameter_declaration

  231 parameter_declaration: type_specifier pointer direct_declarator
  232                      | type_specifier direct_declarator

  233 begin_funcao: IDENTIFIER

  234 begin_parametro: ABRE_PARENTESES

  235 end_parametro: FECHA_PARENTESES


Terminals, with rules where they appear

$end (0) 0
error (256)
STRING_LITERAL (258) 4 188
IDENTIFIER (259) 1 6 7 8 9 11 109 111 127 129 130 133 134 141 142 143
    173 189 217 233
CONSTANT (260) 3 142 143
MENOR (261) 42
MAIOR (262) 43
MENOR_IGUAL (263) 44
MAIOR_IGUAL (264) 45
IGUAL_IGUAL (265) 47
EXCLAMACAO_IGUAL (266) 48
AMPERSAND_AMPERSAND (267) 56
PIPE_PIPE (268) 58
EXCLAMACAO (269) 28
IGUAL (270) 63 90 134 169
MAIS_IGUAL (271) 67
MENOS_IGUAL (272) 68
ASTERISCO_IGUAL (273) 64
BARRA_IGUAL (274) 65
MAIOR_MAIOR_IGUAL (275) 70
MENOR_MENOR_IGUAL (276) 69
PORCENTAGEM_IGUAL (277) 66
CIRCUNFLEXO_IGUAL (278) 72
AMPERSAND_IGUAL (279) 71
PIPE_IGUAL (280) 73
VOID (281) 96
INT (282) 99
CHAR (283) 97
BOOL (284) 105
IF (285) 201 202
ELSE (286) 206
FOR (287) 214
WHILE (288) 208 212
BREAK (289) 219
SWITCH (290) 203
CASE (291) 190
CONTINUE (292) 218
INCLUDE (293)
GOTO (294) 217
RETURN (295) 220 221
CONST (296) 135
DEFAULT (297) 191
EXTERN (298) 92
STATIC (299) 93
MAIS (300) 25 36
MENOS (301) 26 37
MAIS_MAIS (302) 12 18
MENOS_MENOS (303) 13 19
ASTERISCO (304) 24 32 144 145 146 147 160 161
BARRA (305) 33
PORCENTAGEM (306) 34
CIRCUNFLEXO (307) 52
DOIS_PONTOS (308) 60 124 125 189 192
VIRGULA (309) 16 75 88 122 128 129 132 167 168 185 186 188 230
PONTO_VIRGULA (310) 77 78 116 182 188 199 200 208 217 218 219 220 221
INTERROGACAO (311) 60
SUSTENIDO (312)
ABRE_COLCHETES (313) 8 9 142 143 156 157 158 159 160 161 172
FECHA_COLCHETES (314) 8 9 142 143 156 157 158 159 160 161 172
ABRE_PARENTESES (315) 5 6 7 14 22 30 155 162 183 188 201 202 203 207
    208 209 210 234
FECHA_PARENTESES (316) 5 6 7 14 22 30 155 162 183 188 204 205 208 211
    213 235
ABRE_CHAVES (317) 14 109 110 126 127 128 129 164 193 194
FECHA_CHAVES (318) 14 109 110 126 127 128 129 164 193 194
MENOR_MENOR (319) 39
MAIOR_MAIOR (320) 40
PIPE (321) 54
AMPERSAND (322) 23 50
TIL (323) 27
BREAKP (324) 182
GETCH (325) 183
PRINTF (326) 187
UNSIGNED (327) 104
UNION (328) 113
TYPE_NAME (329) 108
TYPEDEF (330) 91
STRUCT (331) 112
SIZEOF (332) 21 22
SIGNED (333) 103
RESTRICT (334) 136
REGISTER (335) 95
INLINE (336) 138
IMAGINARY (337)
ELLIPSIS (338)
DO (339) 208
COMPLEX (340)
AUTO (341) 94
VOLATILE (342) 137
ENUM (343) 126 127 128 129 130
PONTO (344) 11 173
DOUBLE (345) 102
SHORT (346) 98
LONG (347) 100
FLOAT (348) 101


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
primary_expression (95)
    on left: 1 2 3 4 5 6 7 8 9, on right: 10
postfix_expression (96)
    on left: 10 11 12 13 14, on right: 11 12 13 17
argument_expression_list (97)
    on left: 15 16, on right: 7 16
unary_expression (98)
    on left: 17 18 19 20 21 22, on right: 18 19 21 29 62
unary_operator (99)
    on left: 23 24 25 26 27 28, on right: 20
cast_expression (100)
    on left: 29 30, on right: 20 30 31 32 33 34
multiplicative_expression (101)
    on left: 31 32 33 34, on right: 32 33 34 35 36 37
additive_expression (102)
    on left: 35 36 37, on right: 36 37 38 39 40
shift_expression (103)
    on left: 38 39 40, on right: 39 40 41 42 43 44 45
relational_expression (104)
    on left: 41 42 43 44 45, on right: 42 43 44 45 46 47 48
equality_expression (105)
    on left: 46 47 48, on right: 47 48 49 50
and_expression (106)
    on left: 49 50, on right: 50 51 52
exclusive_or_expression (107)
    on left: 51 52, on right: 52 53 54
inclusive_or_expression (108)
    on left: 53 54, on right: 54 55 56
logical_and_expression (109)
    on left: 55 56, on right: 56 57 58
logical_or_expression (110)
    on left: 57 58, on right: 58 59 60
conditional_expression (111)
    on left: 59 60, on right: 60 61 76
assignment_expression (112)
    on left: 61 62, on right: 15 16 62 74 75 157 159 163 185 186 188
assignment_operator (113)
    on left: 63 64 65 66 67 68 69 70 71 72 73, on right: 62
expression (114)
    on left: 74 75, on right: 5 8 9 60 75 200 201 202 203 207 208 210
    221
constant_expression (115)
    on left: 76, on right: 124 125 134 172 190
declaration (116)
    on left: 77 78, on right: 197 225
declaration_specifiers (117)
    on left: 79 80 81 82 83 84 85 86, on right: 77 78 80 82 84 86 226
init_declarator_list (118)
    on left: 87 88, on right: 78 88
init_declarator (119)
    on left: 89 90, on right: 87 88
storage_class_specifier (120)
    on left: 91 92 93 94 95, on right: 79 80
type_specifier (121)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107 108, on right:
    81 82 117 118 231 232
struct_or_union_specifier (122)
    on left: 109 110 111, on right: 106
struct_or_union (123)
    on left: 112 113, on right: 109 110 111
struct_declaration_list (124)
    on left: 114 115, on right: 109 110 115
struct_declaration (125)
    on left: 116, on right: 114 115
specifier_qualifier_list (126)
    on left: 117 118 119 120, on right: 116 117 119 150 151
struct_declarator_list (127)
    on left: 121 122, on right: 116 122
struct_declarator (128)
    on left: 123 124 125, on right: 121 122
enum_specifier (129)
    on left: 126 127 128 129 130, on right: 107
enumerator_list (130)
    on left: 131 132, on right: 126 127 128 129 132
enumerator (131)
    on left: 133 134, on right: 131 132
type_qualifier (132)
    on left: 135 136 137, on right: 83 84 119 120 148 149
function_specifier (133)
    on left: 138, on right: 85 86
declarator (134)
    on left: 139 140, on right: 89 90 123 125
direct_declarator (135)
    on left: 141 142 143, on right: 139 140 231 232
pointer (136)
    on left: 144 145 146 147, on right: 139 146 147 152 154 231
type_qualifier_list (137)
    on left: 148 149, on right: 145 147 149
type_name (138)
    on left: 150 151, on right: 14 22 30
abstract_declarator (139)
    on left: 152 153 154, on right: 151 155
direct_abstract_declarator (140)
    on left: 155 156 157 158 159 160 161 162, on right: 153 154 158
    159 161
initializer (141)
    on left: 163 164, on right: 90 165 166 167 168
initializer_list (142)
    on left: 165 166 167 168, on right: 14 164 167 168
designation (143)
    on left: 169, on right: 166 168
designator_list (144)
    on left: 170 171, on right: 169 171
designator (145)
    on left: 172 173, on right: 170 171
statement (146)
    on left: 174 175 176 177 178 179 180 181, on right: 189 190 191
    198 201 202 203 207 208 209 210
breakp_statement (147)
    on left: 182, on right: 180
getch_statement (148)
    on left: 183, on right: 2
opt_args (149)
    on left: 184 185 186, on right: 186 188
printf (150)
    on left: 187, on right: 188
printf_statement (151)
    on left: 188, on right: 181
labeled_statement (152)
    on left: 189 190 191, on right: 174
begin_case (153)
    on left: 192, on right: 190 191
compound_statement (154)
    on left: 193 194, on right: 175 226
block_item_list (155)
    on left: 195 196, on right: 194 196
block_item (156)
    on left: 197 198, on right: 195 196
expression_statement (157)
    on left: 199 200, on right: 176 215 216
selection_statement (158)
    on left: 201 202 203, on right: 177
begin_switch (159)
    on left: 204, on right: 203
begin_labeled (160)
    on left: 205, on right: 201 202
begin_else (161)
    on left: 206, on right: 202
iteration_statement (162)
    on left: 207 208 209 210, on right: 178
begin_labeled5 (163)
    on left: 211, on right: 209 210
begin_while (164)
    on left: 212, on right: 207
begin_labeled2 (165)
    on left: 213, on right: 207
begin_for (166)
    on left: 214, on right: 209 210
begin_labeled3 (167)
    on left: 215, on right: 209 210
begin_labeled4 (168)
    on left: 216, on right: 209 210
jump_statement (169)
    on left: 217 218 219 220 221, on right: 179
translation_unit (170)
    on left: 222 223, on right: 0 223
external_declaration (171)
    on left: 224 225, on right: 222 223
function_definition (172)
    on left: 226, on right: 224
opt_parametros (173)
    on left: 227 228, on right: 226
parameter_list (174)
    on left: 229 230, on right: 228 230
parameter_declaration (175)
    on left: 231 232, on right: 229 230
begin_funcao (176)
    on left: 233, on right: 226
begin_parametro (177)
    on left: 234, on right: 226
end_parametro (178)
    on left: 235, on right: 226


State 0

    0 $accept: . translation_unit $end

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    translation_unit           go to state 33
    external_declaration       go to state 34
    function_definition        go to state 35


State 1

   96 type_specifier: VOID .

    $default  reduce using rule 96 (type_specifier)


State 2

   99 type_specifier: INT .

    $default  reduce using rule 99 (type_specifier)


State 3

   97 type_specifier: CHAR .

    $default  reduce using rule 97 (type_specifier)


State 4

  105 type_specifier: BOOL .

    $default  reduce using rule 105 (type_specifier)


State 5

  135 type_qualifier: CONST .

    $default  reduce using rule 135 (type_qualifier)


State 6

   92 storage_class_specifier: EXTERN .

    $default  reduce using rule 92 (storage_class_specifier)


State 7

   93 storage_class_specifier: STATIC .

    $default  reduce using rule 93 (storage_class_specifier)


State 8

  104 type_specifier: UNSIGNED .

    $default  reduce using rule 104 (type_specifier)


State 9

  113 struct_or_union: UNION .

    $default  reduce using rule 113 (struct_or_union)


State 10

  108 type_specifier: TYPE_NAME .

    $default  reduce using rule 108 (type_specifier)


State 11

   91 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 91 (storage_class_specifier)


State 12

  112 struct_or_union: STRUCT .

    $default  reduce using rule 112 (struct_or_union)


State 13

  103 type_specifier: SIGNED .

    $default  reduce using rule 103 (type_specifier)


State 14

  136 type_qualifier: RESTRICT .

    $default  reduce using rule 136 (type_qualifier)


State 15

   95 storage_class_specifier: REGISTER .

    $default  reduce using rule 95 (storage_class_specifier)


State 16

  138 function_specifier: INLINE .

    $default  reduce using rule 138 (function_specifier)


State 17

   94 storage_class_specifier: AUTO .

    $default  reduce using rule 94 (storage_class_specifier)


State 18

  137 type_qualifier: VOLATILE .

    $default  reduce using rule 137 (type_qualifier)


State 19

  126 enum_specifier: ENUM . ABRE_CHAVES enumerator_list FECHA_CHAVES
  127               | ENUM . IDENTIFIER ABRE_CHAVES enumerator_list FECHA_CHAVES
  128               | ENUM . ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  129               | ENUM . IDENTIFIER ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  130               | ENUM . IDENTIFIER

    IDENTIFIER   shift, and go to state 36
    ABRE_CHAVES  shift, and go to state 37


State 20

  102 type_specifier: DOUBLE .

    $default  reduce using rule 102 (type_specifier)


State 21

   98 type_specifier: SHORT .

    $default  reduce using rule 98 (type_specifier)


State 22

  100 type_specifier: LONG .

    $default  reduce using rule 100 (type_specifier)


State 23

  101 type_specifier: FLOAT .

    $default  reduce using rule 101 (type_specifier)


State 24

  225 external_declaration: declaration .

    $default  reduce using rule 225 (external_declaration)


State 25

   77 declaration: declaration_specifiers . PONTO_VIRGULA
   78            | declaration_specifiers . init_declarator_list PONTO_VIRGULA
  226 function_definition: declaration_specifiers . begin_funcao begin_parametro opt_parametros end_parametro compound_statement

    IDENTIFIER     shift, and go to state 38
    ASTERISCO      shift, and go to state 39
    PONTO_VIRGULA  shift, and go to state 40

    init_declarator_list  go to state 41
    init_declarator       go to state 42
    declarator            go to state 43
    direct_declarator     go to state 44
    pointer               go to state 45
    begin_funcao          go to state 46


State 26

   79 declaration_specifiers: storage_class_specifier .
   80                       | storage_class_specifier . declaration_specifiers

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 47
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32


State 27

   81 declaration_specifiers: type_specifier .
   82                       | type_specifier . declaration_specifiers

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32


State 28

  106 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 106 (type_specifier)


State 29

  109 struct_or_union_specifier: struct_or_union . IDENTIFIER ABRE_CHAVES struct_declaration_list FECHA_CHAVES
  110                          | struct_or_union . ABRE_CHAVES struct_declaration_list FECHA_CHAVES
  111                          | struct_or_union . IDENTIFIER

    IDENTIFIER   shift, and go to state 49
    ABRE_CHAVES  shift, and go to state 50


State 30

  107 type_specifier: enum_specifier .

    $default  reduce using rule 107 (type_specifier)


State 31

   83 declaration_specifiers: type_qualifier .
   84                       | type_qualifier . declaration_specifiers

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32


State 32

   85 declaration_specifiers: function_specifier .
   86                       | function_specifier . declaration_specifiers

    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32


State 33

    0 $accept: translation_unit . $end
  223 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 53
    VOID       shift, and go to state 1
    INT        shift, and go to state 2
    CHAR       shift, and go to state 3
    BOOL       shift, and go to state 4
    CONST      shift, and go to state 5
    EXTERN     shift, and go to state 6
    STATIC     shift, and go to state 7
    UNSIGNED   shift, and go to state 8
    UNION      shift, and go to state 9
    TYPE_NAME  shift, and go to state 10
    TYPEDEF    shift, and go to state 11
    STRUCT     shift, and go to state 12
    SIGNED     shift, and go to state 13
    RESTRICT   shift, and go to state 14
    REGISTER   shift, and go to state 15
    INLINE     shift, and go to state 16
    AUTO       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    ENUM       shift, and go to state 19
    DOUBLE     shift, and go to state 20
    SHORT      shift, and go to state 21
    LONG       shift, and go to state 22
    FLOAT      shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    function_specifier         go to state 32
    external_declaration       go to state 54
    function_definition        go to state 35


State 34

  222 translation_unit: external_declaration .

    $default  reduce using rule 222 (translation_unit)


State 35

  224 external_declaration: function_definition .

    $default  reduce using rule 224 (external_declaration)


State 36

  127 enum_specifier: ENUM IDENTIFIER . ABRE_CHAVES enumerator_list FECHA_CHAVES
  129               | ENUM IDENTIFIER . ABRE_CHAVES enumerator_list VIRGULA FECHA_CHAVES
  130               | ENUM IDENTIFIER .

    ABRE_CHAVES  shift, and go to state 55

    $default  reduce using rule 130 (enum_specifier)


State 37

  126 enum_specifier: ENUM ABRE_CHAVES . enumerator_list FECHA_CHAVES
  128               | ENUM ABRE_CHAVES . enumerator_list VIRGULA FECHA_CHAVES

    IDENTIFIER  shift, and go to state 56

    enumerator_list  go to state 57
    enumerator       go to state 58


State 38
